# palette-transfer

./: .gitignore  Cargo.toml  README.md
src/: acq.rs  alphabeta_transformer.rs  colorspace.rs  fast_average.rs  fast_std_dev.rs  fast_sum.rs  image_configuration.rs  lab_transformer.rs  lib.rs  luv_transformer.rs  oklab_transformer.rs
src/app/: Cargo.toml
src/app/src/: main.rs
