workspace = { members = ["src/app"] }

[package]
name = "palette-transfer"
version = "0.2.0"
edition = "2021"
description = "Statistical copy palette from one image to another"
readme = "README.md"
keywords = ["palette", "image"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/palette-transfer.git"
categories = ["multimedia::images"]
homepage = "https://github.com/awxkee/palette-transfer.git"
repository = "https://github.com/awxkee/palette-transfer.git"
exclude = ["*.jpg"]

[dependencies]
colorutils-rs = "0.7.0"
rayon = "1.10.0"
